--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Password Strength Background</title>
+    <title>Password Strength Checker</title>
   </head>
   <body>
     <div class="background" id="background">
